--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -1096,9 +1096,9 @@ text-decoration: none;
 }
 }
 
-/*===============Css PRODUCT DETAILS ===================*/
+/*===============Css ADMIN CARGA PRODUCTO ===================*/
 
-/*Menu admin*/
+/*Menu navbar admin*/
 
 .container-navbar-admin {
 
@@ -1107,12 +1107,13 @@ text-decoration: none;
 
 
 
-
 /* The navigation menu */
 .navbar {
   overflow: hidden;
   background-color: rgba(194, 190, 190, 0.9);
 }
+
+
 
 /* Navigation links */
 .navbar a {
@@ -1175,12 +1176,19 @@ text-decoration: none;
   display: block;
 }
 
+/*------------------------------------------------*/
+
+/*Contenedor Formulario admin*/
+
 .contenedor-formulario-admin {
   display: flex;
   margin-top: 200px;
   flex-wrap: wrap;
   
 }
+
+
+/*Titulo Formulario*/
 
 .form-title {
   font-weight: normal;
@@ -1194,6 +1202,8 @@ text-decoration: none;
   color: var(--color-gris);
 }
 
+/*Fondo formulario*/
+
 .form-admin {
   background-color: rgba(0,0,0,0.6);
   color: var(--color-grisos);
@@ -1206,6 +1216,8 @@ text-decoration: none;
   border-radius: 3px;
 }
 
+/*Labels Formulario*/
+
 .form-label {
   display: block;
   color: var(--color-gris);
@@ -1214,6 +1226,8 @@ text-decoration: none;
   padding-bottom: 5px;
   
 }
+
+/*Contenedores input formulario*/
 
 .form-input, .form-textarea, .form-select {
   background-color: rgba(0,0,0,.7);
@@ -1229,12 +1243,16 @@ text-decoration: none;
 
 }
 
+/*Textarea formulario*/
+
 .form-textarea {
 resize: vertical;
 max-height: 150px;
 min-height: 50px;
 
 }
+
+/*Botón Carga producto*/
 
 .btn-submit-admin {
   width: 100%;
@@ -1253,6 +1271,8 @@ min-height: 50px;
   
 
 }
+
+/*Botón adjuntar archivo*/
 
 .contenedor-form-file {
   display: block;
@@ -1288,3 +1308,4 @@ min-height: 50px;
     }
 
   
+/*------------------------------------------------*/
