--- a/site/views/login.ejs
+++ b/site/views/login.ejs
@@ -104,7 +104,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container-lg">
         <div class="d-flex justify-content-around">
           <div class="col-10 container-login">
           
@@ -128,7 +128,7 @@
           </div>
            </div>
           </div>
-          <div class="container">
+          <div class="container-lg">
             <div class="d-flex justify-content-around">
               <div class="col-10 container-login">
               
