carrito finalizar compra

--- a/site/views/carrito.ejs
+++ b/site/views/carrito.ejs
@@ -165,43 +165,35 @@
 
         </table>
 
-        <div class="row" style=background-color:#575355;  >
-          <div class="col-12" style="padding: 10px;" >                          
-              <div class="carrito-cart-total d-flex align-items-center"" >
-                  
-                  <div class="col-2">
-                      <div class="carrito-item d-flex align-items-center h-100 ">
-                          <a href=""></a><i class="fas fa-shuttle-van"></i> <button class="btn btn-light  ml-auto" type="button" data-toggle="modal"
-                          data-target="#comprarModal">Calcular Envío</button>
-                          
-                      </div>
+        <div class="row" style=background-color:#575355;>
+          <div class="col-12" style=" margin: 10px;">                          
+              <div class="carrito-cart-total d-flex " >
+
+                <div class="col-4">
+                  <div class="carrito-item d-flex align-items-center h-100">
+                      <a href=""></a><i class="fas fa-gifts"></i> <button class="btn btn-light   ml-auto" type="button" data-toggle="modal"
+                      data-target="#comprarModal">Voucher de descuento</button>
+                      
                   </div>
-                  
-                  
-                  <div class="col-2">
-                      <div class="carrito-item d-flex align-items-center h-100">
-                          <a href=""></a><i class="fas fa-gifts"></i> <button class="btn btn-light   ml-auto" type="button" data-toggle="modal"
-                          data-target="#comprarModal">GiftCards</button>
-                          
-                      </div>
+                </div>   
+                <div class="col-4">
+                  <div class="carrito-item d-flex align-items-center h-100">
+                      <a href=""></a><i class="fas fa-shuttle-van"></i> <button class="btn btn-light  ml-auto" type="button" data-toggle="modal"
+                      data-target="#comprarModal"> Calcular envío</button>
+                      
                   </div>
-    
-                  <div class="col-3">
-                    <div class="carrito-item d-flex align-items-center h-100">
-                        <a href=""></a><i class="fas fa-gifts"></i> <button class="btn btn-light   ml-auto" type="button" data-toggle="modal"
-                        data-target="#comprarModal">Voucher de descuento</button>
-                        
-                    </div>
-                  </div>
-                  
-                  <p class="mb-0">Total:</p> 
-                  <p class="ml-4 mb-0 carritoTotal  border-bottom pb-2 pt-3">0$</p>
-    
-                  <button class="btn btn-light  ml-auto" type="button" data-toggle="modal"
-                      data-target="#comprarModal">Finalizar Compra</button> 
               </div>
-            </div>   
-     
+                    
+            <p class="mb-0" style="margin: 10px;">Total:</p> 
+            <p class="ml-4 mb-0 carritoTotal  pb-3 pt-2">0$</p>
+
+            </div>
+            
+             </div>
+                                   
+            
+            <button class="btn btn-light  ml-auto" type="button" data-toggle="modal"
+            data-target="#comprarModal">Finalizar Compra</button> 
       </div>
     
       </div>
