vistas crud productos creadas

--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -1102,7 +1102,7 @@ text-decoration: none;
 
 .container-navbar-admin {
 
-  display: block;
+  display: flex;
 }
 
 
@@ -1309,3 +1309,105 @@ min-height: 50px;
 
   
 /*------------------------------------------------*/
+
+/*===============Css ADMIN PRODUCT LIST ===================*/
+
+.container-product-list-admin {
+  display: inline-flex;
+    
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 0%;
+    margin-top: 180px;
+}
+
+.box-product-list-admin {
+  background-color: rgba(0,0,0,.7);
+    margin: 20px;
+  padding: 20px;
+  width: 250px;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+
+}
+
+.box-product-list-admin a {
+  text-align: center;
+}
+
+.box-product-list-admin a img {
+  width: 90%;
+background-color:white;
+padding: 5px;
+margin: 10px 0;
+}
+
+.btn-edit-admin {
+  width: 100%;
+  outline: none;
+  background: rgb(5, 148, 5);
+  font-size: 16px;
+  border: none;
+  color:white;
+  padding: 15px 0;
+  cursor:pointer;
+  transition: all .5s ease;
+  margin: 5px;
+}
+
+.btn-edit-admin:hover {
+  background: #044e01;
+  
+
+}
+
+.btn-delete-admin {
+  width: 100%;
+  outline: none;
+  background: var(--color-rojo);
+  font-size: 16px;
+  border: none;
+  color:white;
+  padding: 15px 0;
+  cursor:pointer;
+  transition: all .5s ease;
+  margin: 5px;
+}
+
+.btn-delete-admin:hover {
+  background: #8a0303;
+  
+
+}
+
+/*===============Css ADMIN PRODUCT LIST ===================*/
+
+.conteiner-index-admin {
+  display: inline-flex;
+    flex-direction: row wrap;
+  justify-content: center;
+  padding: 0%;
+  margin-top: 250px;
+  text-align: center;
+}
+
+
+.contenedor-formulario-admin img {
+  display: inline;
+  width: 100%;
+  padding: 30px;
+  background-color: grey;
+  margin: 10px 0;
+  display: flex;
+}
+
+
+@media (min-width: 768px) {
+    .contenedor-formulario-admin img {
+      margin: 0 20%;
+      width: 60%;
+     
+    }
+  }
