--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -1099,7 +1099,7 @@ text-decoration: none;
 
 /*-----------LOGIN------------------ */ 
 .container-log{
-  background-color: #fff;
+  background-color: #222121;
 }
 
    .container-login {
