crud productos terminado + vistas home, detalle producto y listas productos con motor ejs

--- a/site/views/Admin/partials/header.ejs
+++ b/site/views/Admin/partials/header.ejs
@@ -55,7 +55,8 @@
           <div class="subnav-content">
             <a href="/admin/products/create">Crear Productos</a>
             <a href="/admin/products">Administrar Productos</a>
-            <a href="#careers">Actualización de Productos</a>
+            <a href="/admin/filter">Buscar Productos</a>
+            
           </div>
         </div>
         <div class="subnav">
@@ -84,4 +85,5 @@
   
           </div>
         </div>
+
   </header>
