--- a/site/views/Admin/results.ejs
+++ b/site/views/Admin/results.ejs
@@ -11,8 +11,14 @@
 
 <body style="background-color:gray;">
 
-
+  
   <div class="container-product-list-admin">
+    <div class="container-title-result"><h2>Resultado de la Búsqueda : "<%- search %>" </h2></div>
+    <% if (products.length === 0) { %>
+      <div class="container-title-result"><h2 style="color: red;"> No hay productos que coincidan con esa búsqueda </h2></div>
+
+    <% } %>
+    
     <% products.forEach(product => { %>
      
     
@@ -25,9 +31,8 @@
       <p class="form-input">$<%- toThousand(product.price - Math.round(product.price / 100 * product.descuento)) %></p>
       <h4 class="form-label">Tipo</h4>
       <p class="form-input"><%- product.tipo %> </p>
-      <div class="btn-edit-admin"><a href="/admin/products/edit/<%- product.id %>">Editar</a></div>
-      <div class="container-btn-delete"><form action="/admin/products/delete/<%- product.id %>?_method=DELETE " method="POST">
-        <input type="submit" class="btn-delete-admin" value="Eliminar"></form></div>
+      <input type="submit" class="btn-edit-admin" value="Editar">
+      <input type="submit" class="btn-delete-admin" value="Eliminar">
 
     </div>
     <% }) %>
