--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -370,6 +370,10 @@ header nav ul li a:hover {
   position      : relative;
   border-radius : 10px;
 }
+.button-compra a {
+  color         : white !important;
+  text-decoration: none;
+}
 
 .button-compra:hover {
   background    : var(--color-rojo);
@@ -1318,7 +1322,7 @@ min-height: 50px;
     flex-wrap: wrap;
     justify-content: center;
     padding: 0%;
-    margin-top: 180px;
+    margin-top: 220px;
 }
 
 .box-product-list-admin {
@@ -1355,6 +1359,11 @@ margin: 10px 0;
   cursor:pointer;
   transition: all .5s ease;
   margin: 5px;
+  text-align: center;
+}
+.btn-edit-admin a {
+text-decoration: none;
+color: white;
 }
 
 .btn-edit-admin:hover {
@@ -1362,6 +1371,12 @@ margin: 10px 0;
   
 
 }
+
+.container-btn-delete {
+  width: 100%;
+    margin-right: 10px;
+}
+
 
 .btn-delete-admin {
   width: 100%;
@@ -1385,7 +1400,7 @@ margin: 10px 0;
 /*===============Css ADMIN PRODUCT LIST ===================*/
 
 .conteiner-index-admin {
-  display: inline-flex;
+  display: flex;
     flex-direction: row wrap;
   justify-content: center;
   padding: 0%;
@@ -1404,10 +1419,61 @@ margin: 10px 0;
 }
 
 
+/*===============Css SEARCH ===================*/
+
+.wrapper{
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0,0.6);
+    max-width: 550px;
+    width: 100%;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 5px;
+}
+
+.wrapper .input {
+    width: 85%;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.searchbtn {
+    background: var(--color-rojo);
+    width: 10%;
+    border-radius: 5px;
+    position: relative;
+    cursor: pointer;
+    color: white;
+    border: none;
+    font-size: 25px;
+}
+
+.searchbtn .fas{
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 18px;
+}
+  
+
 @media (min-width: 768px) {
     .contenedor-formulario-admin img {
       margin: 0 20%;
       width: 60%;
      
     }
-  }
+
+/*===============Css RESULTS ===================*/
+.container-title-result {
+width: 100%;
+padding-left: 30px;
+
+}
+}
