--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -24,22 +24,22 @@
             <div class="carousel-item active">
               <img src="/images/carr3.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h5>Bienvenidos a Eclipse Web Site</h5>
+                <p>Disfrutá de la diversa variedad de los vinos mas ricos del país.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="/images/carr1.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h5 style="color: black;"></h5>
+                <p style="color: black;"></p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="images/carr2.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h5></h5>
+                <p></p>
               </div>
             </div>
           </div>
@@ -354,7 +354,7 @@
             totam
             fugiat aspernatur repudiandae ipsum. Perspiciatis aliquam dolorem cum illum beatae necessitatibus laudantium
             laborum nihil illo veritatis.</p>
-          <img src="/images/fondo1.jpg" alt="">
+          <img src="/images/fondo2.jpg" alt="">
         </div>
       </section>
 
