--- a/site/views/Admin/productLoad.ejs
+++ b/site/views/Admin/productLoad.ejs
@@ -11,7 +11,7 @@
 
 <body style="background-color:gray;">
   <div class="contenedor-formulario-admin">
-    <form action="/admin/products/create" method="POST" class="form-admin">
+    <form action="/admin/products/create" method="POST" class="form-admin" enctype="multipart/form-data">
       <div class="form-header">
         <h1 class="form-title">C<span>rear Producto</span></h1>
       </div>
