--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -73,7 +73,7 @@
               <li><a href=""><i class="fas fa-shopping-cart"></i>Carrito</a></li>
             </div>
             <div class="icons-nav2">
-              <li><a href=""><i class="far fa-user"></i></a></li>
+              <li><a href="/ingreso"><i class="far fa-user"></i></a></li>
               <li><a href=""><i class="fas fa-search"></i></a></li>
               <li><a href=""><i class="fas fa-shopping-cart"></i></a></li>
             </div>
