--- a/site/views/Admin/partials/header.ejs
+++ b/site/views/Admin/partials/header.ejs
@@ -82,6 +82,7 @@
             <a href="#link1">Mi perfil</a>
             <a href="#link2">Administrar Usuarios</a>
             <a href="#link3">Mensajes</a>
+            <a href="/admin/logout">Cerrar Session</a>
   
           </div>
         </div>
