--- a/site/views/Users/partials/header.ejs
+++ b/site/views/Users/partials/header.ejs
@@ -51,10 +51,10 @@
       <div class="navbar">
         <a href="/admin">Inicio</a>
         <div class="subnav">
-          <button class="subnavbtn">Productos<i class="fa fa-caret-down"></i></button>
+          <button class="subnavbtn">Carrito<i class="fa fa-caret-down"></i></button>
           <div class="subnav-content">
-            <a href="/admin/products/create">Crear Productos</a>
-            <a href="/admin/products">Administrar Productos</a>
+            <a href="/admin/products/create">Seleccionar productos</a>
+            <a href="/admin/products">Finalizar Compra</a>
             <a href="/admin/filter">Buscar Productos</a>
             
           </div>
@@ -62,17 +62,16 @@
         <div class="subnav">
           <button class="subnavbtn">Ordenes<i class="fa fa-caret-down"></i></button>
           <div class="subnav-content">
-            <a href="#bring">Administrar Ordenes</a>
+            <a href="#bring">Seguimiento de envío</a>
             <a href="#deliver">Estado de Ordenes</a>
           </div>
         </div>
         <div class="subnav">
-          <button class="subnavbtn">Reportes y Pagos<i class="fa fa-caret-down"></i></button>
+          <button class="subnavbtn">Club de beneficios<i class="fa fa-caret-down"></i></button>
           <div class="subnav-content">
-            <a href="#link1">Reporte de cuenta</a>
-            <a href="#link2">Estado de cuenta</a>
-            <a href="#link3">Facturas Electrónicas</a>
-  
+            <a href="#link1">Puntos acumulados</a>
+            <a href="#link2">Catálogo de beneficios</a>
+              
           </div>
         </div>
         <div class="subnav">
@@ -80,9 +79,9 @@
           <div class="subnav-content">
             
             <a href="#link1">Mi perfil</a>
-            <a href="#link2">Administrar Usuarios</a>
+            <a href="#link2">Editar Perfil</a>
             <a href="#link3">Mensajes</a>
-            <a href="ingreso/logout">Cerrar Session</a>
+            <a href="/ingreso/logout">Cerrar Session</a>
   
           </div>
         </div>
