--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -47,7 +47,11 @@
           </g>
         </svg></a>
       </div>
+    </div>
+  </header>
 
+  <header class="navbar-header">
+    <div class=".header-container">
       <!-- BARRA DE NAVEGACION -->
       <nav class="navbar-expand-md">
         <button class="navbar-toggler burger" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
