--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -135,7 +135,7 @@
             totam
             fugiat aspernatur repudiandae ipsum. Perspiciatis aliquam dolorem cum illum beatae necessitatibus laudantium
             laborum nihil illo veritatis.</p>
-          <img src="/images/fondo1.jpg" alt="">
+          
         </div>
       </section>
 
@@ -347,14 +347,14 @@
 
 
 
-      <section class="resenia">
+      <section class="resenia-2">
         <div class="col-12 caja-res">
           <h2>Bodegas y Viñedos</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, repellat reprehenderit sunt minus
             totam
             fugiat aspernatur repudiandae ipsum. Perspiciatis aliquam dolorem cum illum beatae necessitatibus laudantium
             laborum nihil illo veritatis.</p>
-          <img src="/images/fondo2.jpg" alt="">
+          
         </div>
       </section>
 
