Corrige logout en delete, corrige cookies, corrige inicio session

--- a/site/views/Admin/partials/header.ejs
+++ b/site/views/Admin/partials/header.ejs
@@ -82,9 +82,13 @@
             <a href="#link1">Mi perfil</a>
             <a href="#link2">Administrar Usuarios</a>
             <a href="#link3">Mensajes</a>
-            <a href="ingreso/logout">Cerrar Session</a>
-  
+              
           </div>
+        </div>
+        <div class="subnav">
+          <form action="/ingreso/logout?_method=DELETE " method="POST">
+          <button class="subnavbtn" style="cursor: pointer;">Cerrar Session</button></form>
+          
         </div>
 
   </header>
