--- a/site/public/stylesheets/style.css
+++ b/site/public/stylesheets/style.css
@@ -1452,7 +1452,7 @@ label[for="cargar-imagen"]:hover {
 
 .wrapper {
   position       : absolute;
-  top            : 50%;
+  /*top            : 50%;*/
   left           : 50%;
   transform      : translate(-50%, -50%);
   background     : rgba(0, 0, 0, 0.6);
